bridge/base/0-myanmyanlearn-namespace.yaml
#! 0-myanmyanlearn-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: myanmyanlearn
    labels:
        com.docker.compose.project: myanmyanlearn
