bridge/base/app-deployment.yaml
#! app-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app
    namespace: myanmyanlearn
    labels:
        com.docker.compose.project: myanmyanlearn
        com.docker.compose.service: app
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: myanmyanlearn
            com.docker.compose.service: app
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: myanmyanlearn
                com.docker.compose.service: app
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: app
                  image: yeyintlwin/myanmyanlearn:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: app-8080
                      containerPort: 8080
                  volumeMounts:
                    - name: app--myanmyanlearn-uploads
                      mountPath: /app/.myanmyanlearn/uploads
                    - name: app-config-application-properties
                      mountPath: /app/config/application.properties
                      readOnly: true
            volumes:
                - name: app--myanmyanlearn-uploads
                  persistentVolumeClaim:
                    claimName: app-app-uploads
                - name: app-config-application-properties
                  hostPath:
                    path: /Users/yeyintlwin/Desktop/dev/myanmyanlearn/src/main/resources/application.properties
                  readOnly: true
